<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"  android:background="#ffffff" >

     <RelativeLayout
         android:id="@+id/settings_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="fill"
         android:orientation="vertical"
         android:paddingLeft="0dp"
         android:paddingRight="0dp" >

	        
	        <TextView 
	            android:id="@+id/storage_hdr_text" 
	            android:text="@string/storage_hdr_text" 		    
			    android:layout_below="@+id/logout_splitter"
	            android:textColor="#000000" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:paddingTop="10dp" 
	            android:paddingLeft="5dp" android:paddingRight="5dp"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	         <View 	            
			    android:id="@+id/storage_splitter"		    
			    android:layout_below="@+id/storage_hdr_text"
	            android:layout_width="fill_parent" 
			    android:layout_height="2dp" 
			    android:background="@color/DarkGrey"
	            android:layout_marginTop="0dp"	
	            android:layout_marginBottom="3dp" />
	         
	         <TextView 
	            android:id="@+id/default_file_size_hdr_text" 
	            android:text="@string/default_file_size_hdr_text" 		    
			    android:layout_below="@+id/storage_splitter"
	            android:textColor="#666666" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:paddingTop="12dp" 
	            android:paddingLeft="5dp" android:paddingRight="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	         <EditText
	             android:id="@+id/default_file_size"
	             android:layout_below="@+id/storage_splitter"	             
	             android:layout_toLeftOf="@+id/default_file_size_kb_text"
	             android:inputType="number"
	             android:maxLength="4"
	             android:layout_width="50dp"
	             android:layout_height="40dp"
	             android:paddingTop="2dp"
	             android:paddingBottom="2dp"
	             android:paddingLeft="5dp"
	             android:paddingRight="5dp"
	             android:singleLine="true"
	             android:textAppearance="?android:attr/textAppearanceSmall" />
	         
	         <TextView 
	            android:id="@+id/default_file_size_kb_text" 
	            android:text="@string/default_file_size_kb_text" 		    
			    android:layout_below="@+id/storage_splitter"
	            android:layout_alignParentRight="true"
	            android:textColor="#666666" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:paddingTop="12dp" 
	            android:paddingLeft="0dp" android:paddingRight="10dp"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	         <View 	            
			    android:id="@+id/filesize_splitter"		    
			    android:layout_below="@+id/default_file_size"
	            android:layout_width="fill_parent" 
			    android:layout_height="1dp" 
			    android:background="@color/LightGrey"
	            android:layout_marginTop="3dp"	
	            android:layout_marginBottom="3dp" />
	         
	         <TextView 
	            android:id="@+id/default_download_toggle_hdr_text" 
	            android:text="@string/default_download_toggle_hdr_text" 		    
			    android:layout_below="@+id/filesize_splitter"
	            android:textColor="#666666" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:paddingTop="12dp" 
	            android:paddingLeft="5dp" android:paddingRight="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	         
	         <ToggleButton
		        android:id="@+id/default_download_toggle"		    
			    android:layout_below="@+id/filesize_splitter"
	            android:layout_alignParentRight="true"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textOff="Off"
		        android:textOn="On"
	            android:gravity="center" android:layout_marginRight="10dp" android:paddingRight="10dp"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	         
	         <View 	            
			    android:id="@+id/download_toggle_splitter"		    
			    android:layout_below="@+id/default_download_toggle"
	            android:layout_width="fill_parent" 
			    android:layout_height="1dp" 
			    android:background="@color/LightGrey"
	            android:layout_marginTop="3dp"	
	            android:layout_marginBottom="3dp" />
	        
</RelativeLayout>    

</LinearLayout>

</ScrollView>